--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.17",
     "@vitejs/plugin-react": "^5.1.1",
     "vite": "^7.2.4"
   }
